# linera-real-time-forge

./: .env  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
linera-contracts/live-predict/: Cargo.toml  README.md
linera-contracts/live-predict/src/: contract.rs  lib.rs  service.rs  state.rs
src/: App.tsx  index.css
src/components/betting/: BettingCard.tsx  BettingSlip.tsx  BettingSlipTrigger.tsx
src/components/common/: CountdownTimer.tsx  LiveIndicator.tsx
src/components/layout/: Header.tsx  Layout.tsx
src/components/matches/: MatchCard.tsx
src/components/wallet/: CheCkoInstallModal.tsx  DepositModal.tsx
src/contexts/: BettingContext.tsx  WalletContext.tsx
src/data/: mockData.ts
src/hooks/: useMatches.ts
src/lib/: checko.ts
src/lib/linera/: client.ts  hooks.ts  index.ts  types.ts
src/pages/: HowItWorks.tsx  Landing.tsx  Leaderboard.tsx  LiveMatch.tsx  Matches.tsx  WalletDashboard.tsx
src/types/: index.ts
supabase/: config.toml
supabase/functions/esports-data/: index.ts
